--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       >
         <div>
           <img
-            src="https://placehold.co/400"
+            src="/gambar1.png"
             alt="Profile Picture"
             class="mx-auto rounded-full mb-4"
           />
