--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       >
         <div>
           <img
-            src="https://raw.githubusercontent.com/LowScarlet/me/refs/heads/main/gambar1.png"
+            src="gambar1.png"
             alt="Profile Picture"
             class="mx-auto rounded-full mb-4"
           />
