--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       >
         <div>
           <img
-            src="OIP.jpg"
+            src="https://placehold.co/400"
             alt="Profile Picture"
             class="mx-auto rounded-full mb-4 h-64 w-64 object-cover"
           />
